--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   background-color: hsl(0, 0%, 95%);
 }
-form{
+div{
   background-color: white;
   border-radius: 10px;
   text-align: center;
